more on methods part

--- a/Notebook_Pos_Self_Salience_APA.rmd
+++ b/Notebook_Pos_Self_Salience_APA.rmd
@@ -102,9 +102,9 @@ Summary:
 
 Is moral information prioritized in perception? This question evoked much heat a few years ago but remains unsolved. On the one hand, morality is a basic dimension in social evaluation [@dunbar_gossip_2004; @ellemers_morality_2018; @goodwin_moral_2014; @goodwin_moral_2015], this importance should grant moral information more salient than morally neutral information and thus prioritized when the attentional resource is limited. This logic is similar to other stimuli that are also important to humans, e.g., threatening stimuli [XX], rewards [XX], or self-related stimuli [XX]. Indeed, previous studies reported bad characters are prioritized in visual processing [@anderson_visual_2011; @eiserbeck_visual_2020], suggesting that bad people are detected faster than neutral or good people. On the other hand, there is evidence against the view that morally bad information is prioritized in perception. First, researchers reported positive bias in processing moral-related information. For example, @shore_social_2013 found that faces with positive interaction in a trust game were prioritized in the pre-attentive process. Second, the negative bias in perceiving moral information is not robust [@stein_no_2017]. Third, the mechanism underlying the reported negative bias in processing moral-related information is debated [XX]. In short, while the importance of morality is widely recognized, whether moral information is prioritized in perceptual decision-making is still an open question. Here we manipulated the moral character by an associated learning task and investigated whether immediately acquired moral character information is prioritized in a perceptual matching task.
  
-If moral character information is indeed prioritized, the next question is how? Previous studies explain the effect based on valence. For example, the negative bias toward moral information is explained by aligning moral information with affective stimuli and threat detection was supposed to be the potential mechanism [XXX]. The positive bias toward moral information, on the other hand, is explained by value-based attention [XXX]. However, these explanations often ignore the fact the value is subjective per se [@juechems_where_2019]. Merely associating with the self can prioritize the stimuli in perception, attention, working memory, and long-term memory [see @sui_self_attention_2019 and @sui_tics_2015 for more details]. Here, we explicitly included self-relevance in our experimental design and tested whether the prioritization of moral character is modulated by self-relevance. We adopted an associative learning task, or self-tagging task, which has been widely used in studying the self-relevance effect. It is based on the well-established fact that humans can quickly learn the associations between symbols via language and change subsequent behaviors accordingly. This associative learning was not only used in studying the self-relevance effect but also other factors such as aversive stimuli [XX] and rewards [XX]. By explicitly instructing participants on which moral character is self-referencing and which is not, we can test whether the prioritization of moral character is by valence per se or by the self-referential of moral valence. 
+If moral character information is indeed prioritized, the next question is how? Previous studies explain the effect based on valence. For example, the negative bias toward moral information is explained by aligning moral information with affective stimuli and threat detection was supposed to be the potential mechanism [XXX]. The positive bias toward moral information, on the other hand, is explained by value-based attention [XXX]. However, these explanations often ignore the fact the value is subjective *per se* [@juechems_where_2019]. Merely associating with the self can prioritize the stimuli in perception, attention, working memory, and long-term memory [see @sui_self_attention_2019 and @sui_tics_2015 for more details]. Here, we explicitly included self-relevance in our experimental design and tested whether the prioritization of moral character is modulated by self-relevance. We adopted an associative learning task, or self-tagging task, which has been widely used in studying the self-relevance effect. It is based on the well-established fact that humans can quickly learn the associations between symbols via language and change subsequent behaviors accordingly. This associative learning was not only used in studying the self-relevance effect but also other factors such as aversive stimuli [XX] and rewards [XX]. By explicitly instructing participants on which moral character is self-referencing and which is not, we can test whether the prioritization of moral character is by valence per se or by the self-referential of moral valence. 
 
-We address these questions by investigating how immediately acquired moral character information modulates the processing of neutral geometric shapes in a perceptual matching task. Unlike previous studies relies on faces or words as materials, stimuli used in the social associative task are geometric shapes, which acquire moral meaning before the perceptual matching task. Moreover, associations between shapes and different labels of moral characters are counter-balanced between participants, thus eliminating confounding effects by stimuli. Also, because we only used a few stimuli and they were repeatedly presented during the task, the results can not be explained by semantic priming [@unkelbach_chapter_2020], which is the center of the debate on previous results [@gantman_moral_2015; @gantman_see_2016; @firestone_cognition_2015; @firestone_cognition_2016; @Firestone_2016_BBS; @jussim_interpretations_2016]. We examined whether participants’ performance in the perceptual matching task was altered by the immediately acquired moral character of the shapes — in particular, whether the shapes associated with good or bad character are prioritized. We found a robust effect that shapes associated with good character are prioritized in the perceptual matching task. In a series of control experiments, we confirmed that moral content drove the prioritization effect, instead of other factors such as familiarity. In the subsequent experiments, we further tested whether the prioritization of moral character was caused by the valence of moral character or the interaction between valence and self-referential processing and found that only shapes associated with both good character and the self are prioritized, suggesting spontaneous moral self-referential as a novel mechanism underlying prioritization of good character in perceptual decision-making.
+We address these questions by investigating how immediately acquired moral character information modulates the processing of neutral geometric shapes in a perceptual matching task. Unlike previous studies relies on faces or words as materials, stimuli used in the social associative task are geometric shapes, which acquire moral meaning before the perceptual matching task. Moreover, associations between shapes and different labels of moral characters are counter-balanced between participants, thus eliminating confounding effects by stimuli. Also, because we only used a few stimuli and they were repeatedly presented during the task, the results can not be explained by semantic priming [@unkelbach_chapter_2020], which is the center of the debate on previous results [@gantman_moral_2015; @gantman_see_2016; @firestone_cognition_2015; @Firestone_2016_BBS; @jussim_interpretations_2016]. We examined whether participants’ performance in the perceptual matching task was altered by the immediately acquired moral character of the shapes — in particular, whether the shapes associated with good or bad character are prioritized. We found a robust effect that shapes associated with good character are prioritized in the perceptual matching task. In a series of control experiments, we confirmed that moral content drove the prioritization effect, instead of other factors such as familiarity. In the subsequent experiments, we further tested whether the prioritization of moral character was caused by the valence of moral character or the interaction between valence and self-referential processing and found that only shapes associated with both good character and the self are prioritized, suggesting spontaneous moral self-referential as a novel mechanism underlying prioritization of good character in perceptual decision-making.
 
 <!-- 
 we attempted to distinguish these two possibilities by a social associative learning task in which physical features had minimal influences — participants performed a perceptual matching task after associated different moral characters (good, neutral, and bad) with different geometric shapes. If there is a positivity effect, there should be an advantage for shapes associated with good character over shapes associated with neutral or bad shapes. If there is a negativity effect, the advantage should be occur on shapes associated with bad characters. The first four experiments and two additional follow-up experiments provided strong evidence for good character effect in the current paradigm.
