--- a/Notebook_Pos_Self_Salience_APA.tex
+++ b/Notebook_Pos_Self_Salience_APA.tex
@@ -220,9 +220,9 @@ Alternative title: Self-relevance modulates the prioritization of the good chara
 
 Is moral information prioritized in perception? This question evoked much heat a few years ago but remains unsolved. On the one hand, morality is a basic dimension in social evaluation (Dunbar, 2004; Ellemers, 2018; Goodwin, 2015; Goodwin, Piazza, \& Rozin, 2014), this importance should grant moral information more salient than morally neutral information and thus prioritized when the attentional resource is limited. This logic is similar to other stimuli that are also important to humans, e.g., threatening stimuli {[}XX{]}, rewards {[}XX{]}, or self-related stimuli {[}XX{]}. Indeed, previous studies reported bad characters are prioritized in visual processing (Anderson, Siegel, Bliss-Moreau, \& Barrett, 2011; Eiserbeck \& Abdel Rahman, 2020), suggesting that bad people are detected faster than neutral or good people. On the other hand, there is evidence against the view that morally bad information is prioritized in perception. First, researchers reported positive bias in processing moral-related information. For example, Shore and Heerey (2013) found that faces with positive interaction in a trust game were prioritized in the pre-attentive process. Second, the negative bias in perceiving moral information is not robust (Stein, Grubb, Bertrand, Suh, \& Verosky, 2017). Third, the mechanism underlying the reported negative bias in processing moral-related information is debated {[}XX{]}. In short, while the importance of morality is widely recognized, whether moral information is prioritized in perceptual decision-making is still an open question. Here we manipulated the moral character by an associated learning task and investigated whether immediately acquired moral character information is prioritized in a perceptual matching task.
 
-If moral character information is indeed prioritized, the next question is how? Previous studies explain the effect based on valence. For example, the negative bias toward moral information is explained by aligning moral information with affective stimuli and threat detection was supposed to be the potential mechanism {[}XXX{]}. The positive bias toward moral information, on the other hand, is explained by value-based attention {[}XXX{]}. However, these explanations often ignore the fact the value is subjective per se (Juechems \& Summerfield, 2019). Merely associating with the self can prioritize the stimuli in perception, attention, working memory, and long-term memory (\textbf{sui\_tics\_2015?}). Here, we explicitly included self-relevance in our experimental design and tested whether the prioritization of moral character is modulated by self-relevance. We adopted an associative learning task, or self-tagging task, which has been widely used in studying the self-relevance effect. It is based on the well-established fact that humans can quickly learn the associations between symbols via language and change subsequent behaviors accordingly. This associative learning was not only used in studying the self-relevance effect but also other factors such as aversive stimuli {[}XX{]} and rewards {[}XX{]}. By explicitly instructing participants on which moral character is self-referencing and which is not, we can test whether the prioritization of moral character is by valence per se or by the self-referential of moral valence.
+If moral character information is indeed prioritized, the next question is how? Previous studies explain the effect based on valence. For example, the negative bias toward moral information is explained by aligning moral information with affective stimuli and threat detection was supposed to be the potential mechanism {[}XXX{]}. The positive bias toward moral information, on the other hand, is explained by value-based attention {[}XXX{]}. However, these explanations often ignore the fact the value is subjective \emph{per se} (Juechems \& Summerfield, 2019). Merely associating with the self can prioritize the stimuli in perception, attention, working memory, and long-term memory Sui \& Humphreys (2015). Here, we explicitly included self-relevance in our experimental design and tested whether the prioritization of moral character is modulated by self-relevance. We adopted an associative learning task, or self-tagging task, which has been widely used in studying the self-relevance effect. It is based on the well-established fact that humans can quickly learn the associations between symbols via language and change subsequent behaviors accordingly. This associative learning was not only used in studying the self-relevance effect but also other factors such as aversive stimuli {[}XX{]} and rewards {[}XX{]}. By explicitly instructing participants on which moral character is self-referencing and which is not, we can test whether the prioritization of moral character is by valence per se or by the self-referential of moral valence.
 
-We address these questions by investigating how immediately acquired moral character information modulates the processing of neutral geometric shapes in a perceptual matching task. Unlike previous studies relies on faces or words as materials, stimuli used in the social associative task are geometric shapes, which acquire moral meaning before the perceptual matching task. Moreover, associations between shapes and different labels of moral characters are counter-balanced between participants, thus eliminating confounding effects by stimuli. Also, because we only used a few stimuli and they were repeatedly presented during the task, the results can not be explained by semantic priming (Unkelbach, Alves, \& Koch, 2020), which is the center of the debate on previous results (Firestone \& Scholl, 2015, 2016; Gantman \& Bavel, 2015, 2016; Jussim, Crawford, Anglin, Stevens, \& Duarte, 2016; \textbf{firestone\_cognition\_2016?}). We examined whether participants' performance in the perceptual matching task was altered by the immediately acquired moral character of the shapes --- in particular, whether the shapes associated with good or bad character are prioritized. We found a robust effect that shapes associated with good character are prioritized in the perceptual matching task. In a series of control experiments, we confirmed that moral content drove the prioritization effect, instead of other factors such as familiarity. In the subsequent experiments, we further tested whether the prioritization of moral character was caused by the valence of moral character or the interaction between valence and self-referential processing and found that only shapes associated with both good character and the self are prioritized, suggesting spontaneous moral self-referential as a novel mechanism underlying prioritization of good character in perceptual decision-making.
+We address these questions by investigating how immediately acquired moral character information modulates the processing of neutral geometric shapes in a perceptual matching task. Unlike previous studies relies on faces or words as materials, stimuli used in the social associative task are geometric shapes, which acquire moral meaning before the perceptual matching task. Moreover, associations between shapes and different labels of moral characters are counter-balanced between participants, thus eliminating confounding effects by stimuli. Also, because we only used a few stimuli and they were repeatedly presented during the task, the results can not be explained by semantic priming (Unkelbach, Alves, \& Koch, 2020), which is the center of the debate on previous results (Firestone \& Scholl, 2015, 2016; Gantman \& Bavel, 2015, 2016; Jussim, Crawford, Anglin, Stevens, \& Duarte, 2016). We examined whether participants' performance in the perceptual matching task was altered by the immediately acquired moral character of the shapes --- in particular, whether the shapes associated with good or bad character are prioritized. We found a robust effect that shapes associated with good character are prioritized in the perceptual matching task. In a series of control experiments, we confirmed that moral content drove the prioritization effect, instead of other factors such as familiarity. In the subsequent experiments, we further tested whether the prioritization of moral character was caused by the valence of moral character or the interaction between valence and self-referential processing and found that only shapes associated with both good character and the self are prioritized, suggesting spontaneous moral self-referential as a novel mechanism underlying prioritization of good character in perceptual decision-making.
 
 \hypertarget{disclosures}{%
 \section{Disclosures}\label{disclosures}}
@@ -241,18 +241,59 @@ All participants received informed consent and compensated for their time. These
 
 This series of experiments used the social associative learning paradigm (or self-tagging paradigm, see Sui, He, and Humphreys (2012)), in which participants first learned the associations between geometric shapes and labels of different moral characters (e.g., in the first three studies, the triangle, square, and circle and Chinese words for ``good person'', ``neutral person'', and ``bad person'', respectively). The associations of shapes and labels were counterbalanced across participants. The paradigm consists of a brief learning stage and a test stage. During the learning stage, participants were instructed about the association between shapes and labels. Participants started the test stage with a practice phase to familiarize themselves with the task, in which they viewed one of the shapes above the fixation while one of the labels below the fixation and judged whether the shape and the label matched the association they learned. If the overall accuracy reached 60\% or higher at the end of the practicing session, participants proceeded to the experimental task of the test stage. Otherwise, they finished another practices sessions until the overall accuracy was equal to or greater than 60\%. The experimental task shared the same trial structure as in the practice.
 
-Experiments 1a, 1b, 1c, 2, 5, and 6a were designed to explore and validate the effect of moral character on perceptual matching. All these experiments shared a 2 (matching: match vs.~nonmatch) by 3 (moral character: good vs.~neutral vs.~bad person) within-subject design. Experiment 1a was the first one of the whole series of studies, which revealed a prioritization of good character. Experiments 1b, 1c, and 2 were then designed to confirm that it is moral character that caused the effect. More specifically, experiment 1b used different Chinese words as labels to test whether the effect only occurred with specific words. Experiment 1c manipulated the moral character indirectly: participants first learned to associate different moral behaviors with different Chinese names, after remembering the association, they then associate the names with different shapes and finished the perceptual matching task. Experiment 2 further tested whether the way we presented the stimuli influence the prioritization of moral character, by sequentially presenting labels and shapes instead of simultaneous presentation. Note that a few participants in experiment 2 also participated in experiment 1a because we originally planned a cross-task comparison. Experiment 5 was designed to compare the effect size of moral character and other important social evaluative dimensions (aesthetics and emotion). Different social evaluative dimensions were implemented in different blocks, only the data from moral character blocks, which shared the design of experiment 1a, were included in the three-level models. Experiment 6a, which shared the same design as experiment 2, was an EEG experiment aimed at exploring the neural correlates of the effect. Only the behavioral results of experiment 6a were included in the analysis reported here.
+Experiments 1a, 1b, 1c, 2, 5, and 6a were designed to explore and confirm the effect of moral character on perceptual matching. All these experiments shared a 2 (matching: match vs.~nonmatch) by 3 (moral character: good vs.~neutral vs.~bad person) within-subject design. Experiment 1a was the first one of the whole series of studies, which aimed to examine the prioritization of moral character and found that shapes associated with good character were prioritized. Experiments 1b, 1c, and 2 were to confirm that it is the moral character that caused the effect. More specifically, experiment 1b used different Chinese words as labels to test whether the effect was contaminated by familiarity. Experiment 1c manipulated the moral character indirectly: participants first learned to associate different moral behaviors with different Chinese names, after remembering the association, they then associate the names with different shapes and finished the perceptual matching task. Experiment 2 further tested whether the way we presented the stimuli influence the prioritization of moral character, by sequentially presenting labels and shapes instead of simultaneous presentation. Note that a few participants in experiment 2 also participated in experiment 1a because we originally planned a cross-task comparison. Experiment 5 was designed to compare the prioritization of good character with other important social values (aesthetics and emotion). All social values had three levels, positive, neutral, and negative, and were associated with different shapes. Participants finished the associative learning task for different social values in different blocks, and the order of the social values was counterbalanced. Only the data from moral character blocks, which shared the design of experiment 1a, were reported here. Experiment 6a, which shared the same design as experiment 2, was an EEG experiment aimed at exploring the neural mechanism of the prioritization of good character. Only behavioral results of experiment 6a were reported here.
 
-Experiments 3a, 3b, and 6b were designed to test whether the prioritization of good character can be explained by the valence effect alone or by an interaction between the valence effect and self-referential processing. To do so, we included self-reference as another within-subject variable. For example, experiment 3a directly extended experiment 1a into a 2 (matching: match vs.~nonmatch) by 2 (reference: self vs.~other) by 3 (moral character: good vs.~neutral vs.~bad) within-subject design. Thus, in experiment 3a, there were six conditions (good-self, neutral-self, bad-self, good-other, neutral-other, and bad-other) and six shapes (triangle, square, circle, diamond, pentagon, and trapezoids). Experiment 6b was an EEG experiment based on experiment 3a but presented the label and shape sequentially. Because of the relatively high working memory load (six label-shape pairs), experiment 6b was conducted in two days: on the first day participants finished the perceptual matching task as a practice, and on the second day, they finished the task again while the EEG signals were recorded. We only focus on the first day's data here. Experiment 3b was designed to separate the self-referential trials and other-referential trials. That is, participants finished two different types of blocks: in the self-referential blocks, they only made matching judgments to shape-label pairs that related to the self (i.e., shapes and labels of good-self, neutral-self, and bad-self), in the other-referential blocks, they only responded to shape-label pairs that related to the other (i.e., shapes and labels of good-other, neutral-other, and bad-other).
+Experiments 3a, 3b, and 6b were designed to test whether the prioritization of good character can be explained by the valence effect alone or by an interaction between the valence effect and self-referential processing. To do so, we included self-reference as another within-subject variable. For example, experiment 3a extended experiment 1a into a 2 (matching: match vs.~nonmatch) by 2 (reference: self vs.~other) by 3 (moral character: good vs.~neutral vs.~bad) within-subject design. Thus, in experiment 3a, there were six conditions (good-self, neutral-self, bad-self, good-other, neutral-other, and bad-other) and six shapes (triangle, square, circle, diamond, pentagon, and trapezoids). Experiment 6b was an EEG experiment based on experiment 3a but presented the label and shape sequentially. Because of the relatively high working memory load (six label-shape pairs), participants finished experiment 6b in two days. On the first day, participants completed the perceptual matching task as a practice, and on the second day, they finished the task again while the EEG signals were recorded. We only focus on the first day's data here. Experiment 3b was designed to test whether the effect found in experiments 3a and 6b is robust if we separately present the self-referential trials and other-referential trials. That is, participants finished two different types of blocks: in the self-referential blocks, they only made matching judgments to shape-label pairs that related to the self (i.e., shapes and labels of good-self, neutral-self, and bad-self), in the other-referential blocks, they only responded to shape-label pairs that related to the other (i.e., shapes and labels of good-other, neutral-other, and bad-other).
 
-Experiments 4a and 4b were designed to further test the mechanism of the self-referential process in the prioritization of good character. In experiment 4a, participants were instructed to learn the association between two shapes (circle and square) with two labels (self vs.~other) in the learning stage. In the test stage, they were instructed only respond to the shape and label during the test stage. To test the effect of moral character, we presented the labels of moral character in shapes and instructed participants to ignore the words in shapes when making matching judgments. In the experiment 4b, we reversed the role of self and moral character in the task: Participants learned associations between three labels (good-person, neutral-person, and bad-person) and three shapes (circle, square, and triangle) and made matching judgments about the shape and label of moral character, while words related to identity, ``self'' or ``other'', were presented within the shapes. As in 4a, participants were told to ignore the words inside the shape during the perceptual matching task.
+Experiments 4a and 4b were designed to further test the interaction between valence and self-referential process in prioritization of good character. In experiment 4a, participants were instructed to learn the association between two shapes (circle and square) with two labels (self vs.~other) in the learning stage. In the test stage, they were instructed only respond to the shape and label during the test stage. To test the effect of moral character, we presented the labels of moral character in the shapes and instructed participants to ignore the words in shapes when making matching judgments. In the experiment 4b, we reversed the role of self and moral character in the task: Participants learned associations between three labels (good-person, neutral-person, and bad-person) and three shapes (circle, square, and triangle) and made matching judgments about the shape and label of moral character, while words related to identity, ``self'' or ``other'', were presented within the shapes. As in 4a, participants were told to ignore the words inside the shape during the perceptual matching task.
 
 \hypertarget{stimuli-and-materials}{%
 \subsection{Stimuli and Materials}\label{stimuli-and-materials}}
 
-E-prime 2.0 was used for presenting stimuli and collecting behavioral responses. The experiments were conducted in two universities located in two different cities in China. Participants recruited from Tsinghua University, Beijing, finished the experiment individually in a dim-lighted chamber. Stimuli were presented on 22-inch CRT monitors and participants rest their chins on a brace to fix the distance between their eyes and the screen around 60 cm. The visual angle of geometric shapes was about \(3.7^\circ × 3.7^\circ\), the fixation cross is of \(0.8^\circ × 0.8^\circ\) visual angle at the center of the screen. The words were of \(3.6^\circ\) × \(1.6^\circ\) visual angle. The distance between the center of shapes or images of labels and the fixation cross was of \(3.5^\circ\) visual angle. Participants recruited from Wenzhou University, Wenzhou, finished the experiment in a group consisting of 3 \textasciitilde{} 12 participants in a dim-lighted testing room. They were required to finish the whole experiment independently. Also, they were instructed to start the experiment simultaneously, so that the distraction between participants was minimized. The stimuli were presented on 19-inch CRT monitors with the same set of parameters in E-prime 2.0 as in Tsinghua University, however, the visual angles could not be controlled because participants' chins were not fixed.
+We used E-prime 2.0 for presenting stimuli and collecting behavioral responses. Data were collected from two universities located in two different cities in China. Participants recruited from Tsinghua University, Beijing, finished the experiment individually in a dim-lighted chamber. Stimuli were presented on 22-inch CRT monitors and participants rested their chins on a brace to fix the distance between their eyes and the screen around 60 cm. The visual angle of geometric shapes was about \(3.7^\circ × 3.7^\circ\), the fixation cross is of \(0.8^\circ × 0.8^\circ\) visual angle at the center of the screen. The words were of \(3.6^\circ\) × \(1.6^\circ\) visual angle. The distance between the center of shapes or images of labels and the fixation cross was of \(3.5^\circ\) visual angle. Participants from Wenzhou University, Wenzhou, finished the experiment in a group consisting of 3 \textasciitilde{} 12 participants in a dim-lighted testing room. They were instructed to finish the whole experiment independently. Also, they were told to start the experiment at the same time so that the distraction between participants was minimized. The stimuli were presented on 19-inch CRT monitors with the same set of parameters in E-prime 2.0 as in Tsinghua University, however, the visual angles could not be controlled because participants' chins were not fixed.
 
-In most of these experiments, participants were also asked to fill out questionnaires after finishing the behavioral tasks. All the questionnaire data were open (see, dataset 4 in Liu et al., 2020). See Table S1 for a summary of information about all the experiments.
+In most of these experiments, participants were also asked to fill out questionnaires after finishing the behavioral tasks. All the questionnaire data were open (see, dataset 4 in Liu et al., 2020). See Table 1 for a summary of information about all the experiments.
+
+\begin{table}[tbp]
+
+\begin{center}
+\begin{threeparttable}
+
+\caption{\label{tab:Table_1_exp_info}Information about all experiments.}
+
+\begin{tabular}{llllllllll}
+\toprule
+ExpID & \multicolumn{1}{c}{Year} & \multicolumn{1}{c}{Month} & \multicolumn{1}{c}{N} & \multicolumn{1}{c}{DV} & \multicolumn{1}{c}{Design} & \multicolumn{1}{c}{Trials.Condition} & \multicolumn{1}{c}{Self.ref} & \multicolumn{1}{c}{Valence} & \multicolumn{1}{c}{Presenting}\\
+\midrule
+Exp\_1a\_1 & 2014 & 4 & 38 (35) & behav & 3 * 2 & 60 & explicit & words & Simultaneously\\
+Exp\_1a\_2 & 2017 & 4 & 18 (16) & behav & 3 * 2 & 60 & explicit & words & Simultaneously\\
+Exp\_1b\_1 & 2014 & 10 & 39 (27) & behav & 3 * 2 & NA & explicit & words & Simultaneously\\
+Exp\_1b\_2 & 2017 & 4 & 33 (25) & behav & 3 * 2 & NA & explicit & words & Simultaneously\\
+Exp\_1c & 2014 & 10 & 23 (23) & behav & 3 * 2 & NA & explicit & descriptions & Simultaneously\\
+Exp\_2 & 2014 & 5 & 35 (34) & behav & 3 * 2 & NA & explicit & words & Sequentially\\
+Exp\_3a & 2014 & 11 & 38 (35) & behav & 3 * 2 * 2 & NA & explicit & words & Simultaneously\\
+Exp\_3b & 2017 & 4 & 61 (56) & behav & 3 * 2 * 2 & NA & explicit & words & Simultaneously\\
+Exp\_4a\_1 & 2015 & 6 & 32 (29) & behav & 3 * 2 * 2 & NA & implicit & words & Simultaneously\\
+Exp\_4a\_2 & 2017 & 4 & 32 (30) & behav & 3 * 2 * 2 & NA & implicit & words & Simultaneously\\
+Exp\_4b\_1 & 2015 & 10 & 34 (32) & behav & 3 * 2 * 2 & NA & implicit & words & Simultaneously\\
+Exp\_4b\_2 & 2017 & 4 & 19 (13) & behav & 3 * 2 * 2 & NA & implicit & words & Simultaneously\\
+Exp\_5 & 2016 & 1 & 43 (38) & behav & 3 * 2 * 4 & NA & explicit & words & Simultaneously\\
+Exp\_6a & 2014 & 12 & 24 (24) & behav/EEG & 3 * 2 & NA & explicit & words & Sequentially\\
+Exp\_6b & 2016 & 1 & 23 (22) & behav/EEG & 3 * 2 * 2 & NA & explicit & words & Sequentially\\
+Exp\_7a & 2016 & 7 & 35 (29) & behav & 2 * 2 * 2 & NA & explicit & words & Simultaneously\\
+Exp\_7b & 2018 & 5 & 46 (42) & behav & 2 * 2 * 2 & NA & explicit & words & Simultaneously\\
+\bottomrule
+\addlinespace
+\end{tabular}
+
+\begin{tablenotes}[para]
+\normalsize{\textit{Note.} DV = dependent variables; Valence = how valence was manipulated; Shape \& Label = how shapes \& labels were presented.}
+\end{tablenotes}
+
+\end{threeparttable}
+\end{center}
+
+\end{table}
 
 \hypertarget{data-analysis}{%
 \subsection{Data analysis}\label{data-analysis}}
@@ -261,7 +302,7 @@ We used the \texttt{tidyverse} of r (see script \texttt{Load\_save\_data.r}) to 
 
 We used the Bayesian hierarchical model (BHM, or Bayesian generalized linear mixed models, Bayesian multilevel models) to model the reaction time and accuracy data because BHM provided three advantages over the classic NHST approach (repeated measure ANOVA or \emph{t}-tests). First, BHM estimates the posterior distributions of parameters for statistical inference, therefore providing uncertainty in estimation (Rouder \& Lu, 2005). Second, BHM, where generalized linear mixed models could be easily implemented, can use distributions that fit the distribution of real data instead of using the normal distribution for all data. Using appropriate distributions for the data will avoid misleading results and provide a better fitting of the data. For example, Reaction times are not normally distributed but are right skewed, and the linear assumption in ANOVAs is not satisfied (Rousselet \& Wilcox, 2019). Third, BHM provides a unified framework to analyze data from different levels and different sources, avoiding information loss when we need to combine data from different experiments.
 
-We used the \texttt{r} package \texttt{BRMs} (\textbf{Bürkner\_2017?}), which used Stan (Carpenter et al., 2017) as the backend, for the BHM analyses. We estimated the overall effect across experiments that shared the same experimental design using one model, instead of a two-step approach that was adopted in mini-meta-analysis (e.g., Goh, Hall, \& Rosenthal, 2016). More specifically, a three-level model was used to estimate the overall effect of good-person on perceptual matching, which include data from five experiments: 1a, 1b, 1c, 2, 5, and 6a. Similarly, a three-level HBM model is used for all experiments that tested the modulation effect of self-referential processing on the prioritization of good character, including experiments 3a, 3b, and 6b. Results of the individual experiment can be found in the supplementary results. For experiments 4a and 4b, which tested the implicit interaction between the self and good character, we used HBM for each experiment separately.
+We used the \texttt{r} package \texttt{BRMs} (Bürkner, 2017), which used Stan (Carpenter et al., 2017) as the backend, for the BHM analyses. We estimated the overall effect across experiments that shared the same experimental design using one model, instead of a two-step approach that was adopted in mini-meta-analysis (e.g., Goh, Hall, \& Rosenthal, 2016). More specifically, a three-level model was used to estimate the overall effect of prioritization of good character, which included data from five experiments: 1a, 1b, 1c, 2, 5, and 6a. Similarly, a three-level HBM model is used for experiments 3a, 3b, and 6b. Results of individual experiments can be found in the supplementary results. For experiments 4a and 4b, which tested the implicit interaction between the self and good character, we used HBM for each experiment separately.
 
 \hypertarget{response-data}{%
 \subsubsection{Response data}\label{response-data}}
@@ -282,62 +323,63 @@ The subjective-specific intercepts (\(\beta_{0} = -zFAR\)) and slopes (\(\beta_{
 \theta_{1}\\
 \end{bmatrix}, \sum) \]
 
-In \texttt{BRMs}, we used the following formula for the first set of experiments, which have a 2 (matching: match vs.~non-match) by 3 (moral character: good vs.~neutral vs.~bad) within-subject design, i.e., experiment 1a, 1b, 1c, 2, 5, and 6a:
+We used the following formula for experiments 1a, 1b, 1c, 2, 5, and 6a, which have a 2 (matching: match vs.~non-match) by 3 (moral character: good vs.~neutral vs.~bad) within-subject design:
 
 \texttt{saymatch\ \textasciitilde{}\ 0\ +\ Valence\ +\ Valence:ismatch\ +\ (0\ +\ Valence\ +\ Valence:ismatch\ \textbar{}\ Subject)\ +\ (0\ +\ Valence\ +\ Valence:ismatch\ \textbar{}\ ExpID\_new:Subject)\ ,\ family\ =\ bernoulli(link="probit")}
 
-For experiments 3a, 3b, and 6b, an additional variable is included in the formula:
+in which the \texttt{saymatch} is the response data whether participants pressed the key corresponding to ``match'', \texttt{ismatch} is the independent variable of matching, \texttt{Valence} is the independent variable of moral character, \texttt{Subject} is the index of participants, and \texttt{Exp\_ID\_new} is the index of different experiments. Not that we distinguished data collected from two universities.
+
+For experiments 3a, 3b, and 6b, an additional variable, i.e., reference (self vs.~other), was included in the formula:
 
 \texttt{saymatch\ \textasciitilde{}\ 0\ +\ ID:Valence\ +\ ID:Valence:ismatch\ +\ (0\ +\ ID:Valence\ +\ ID:Valence:ismatch\ \textbar{}\ Subject)\ +\ (0\ +\ ID:Valence\ +\ ID:Valence:ismatch\ \textbar{}\ ExpID\_new:Subject),\ family\ =\ bernoulli(link="probit")}
+in which the \texttt{ID} is the independent variable ``reference'', which means whether the stimulus was self-referential or other-referential.
 
 \hypertarget{reaction-times}{%
 \subsubsection{Reaction times}\label{reaction-times}}
 
 We used log-normal distribution (\url{https://lindeloev.github.io/shiny-rt/\#34_(shifted)_log-normal}) to model the RT data. This means that we need to estimate the posterior of two parameters: \(\mu\), and \(\sigma\). \(\mu\) is the mean of the \texttt{logNormal} distribution, and \(\sigma\) is the disperse of the distribution.
 
-The reaction time of the \(j\)th subject on \(i\)th trial is log-normal distributed:
+The reaction time of the \(j\)th subject on \(i\)th trial, \(y_{ij}\), is log-normal distributed:
 \[ log(y_{ij}) \sim N(\mu_{j}, \sigma_{j})\]
-\(y_{ij}\) is the RT of the \(i\)th trial of the \(j\)th participants.
 
+The parameter \(\mu_{j}\) is a linear regression of the independent variables:
 \[\mu_{j} = \beta_{0j} + \beta_{1j}*IsMatch_{ij} * Valence_{ij}\]
+
+and the parameter \(\sigma_{j}\) does not vary with independent variables:
+\[\sigma_{j} \sim HalfNormal()\]
+
+The subjective-specific intercepts (\(\beta_{0j}\)) and slopes (\(\beta_{1j}\)) are described by multivariate normal with means and a covariance matrix for the parameters.
 \[ \begin{bmatrix}\beta_{0j}\\
 \beta_{1j}\\
 \end{bmatrix} \sim N(\begin{bmatrix}\theta_{0}\\
 \theta_{1}\\
 \end{bmatrix}, \sum) \]
 
-\[\sigma_{j} \sim HalfNormal()\]
-
-The formula used for modeling the data from experiments with a 2 by 3 within-subject design is as follows:
-
-\texttt{RT\_sec\ \textasciitilde{}\ 1\ +\ Valence*ismatch\ +\ (Valence*ismatch\ \textbar{}\ Subject),\ family\ =\ lognormal()}
-
-For experiments with a 2 by 2 by 3 within-subject design, the formula is as follows:
-
-\texttt{RT\_sec\ \textasciitilde{}\ 1\ +\ ID*Valence*ismatch\ +\ (ID*Valence*ismatch\ \textbar{}\ Subject),\ family\ =\ lognormal()}
-
-As for the \(d’\), we expanded the RT model to three-level models and the formulas used for three-level models are as follows:
+The formula used for experiments 1a, 1b, 1c, 2, 5, and 6a, which have a 2 (matching: match vs.~non-match) by 3 (moral character: good vs.~neutral vs.~bad) within-subject design, is as follows:
 
 \texttt{RT\_sec\ \textasciitilde{}\ 1\ +\ Valence*ismatch\ +\ (Valence*ismatch\ \textbar{}\ Subject)\ +\ (Valence*ismatch\ \textbar{}\ ExpID\_new:Subject),\ family\ =\ lognormal()}
+in which \texttt{RT\_sec} is the reaction times data with the second as a unit. The other variables has the same meaning as the response data.
 
-or
-
+For experiments 3a, 3b, and 6b, which have a 2 by 2 by 3 within-subject design, the formula is as follows:
 \texttt{RT\_sec\ \textasciitilde{}\ 1\ +\ ID*Valence\ +\ (ID*Valence\ \textbar{}\ Subject)\ +\ (ID*Valence\ \textbar{}\ ExpID\_new:Subject),\ family\ =\ lognormal()}
 
 Note that for experiments 3a, 3b, and 6b, the three-level model for reaction times only included the matched trials to avoid divergence when estimating the posterior of the parameters.
 
+\hypertarget{testing-hypotheses}{%
+\subsubsection{Testing hypotheses}\label{testing-hypotheses}}
+
 \hypertarget{prioritization-of-moral-character}{%
-\subsubsection{Prioritization of moral character}\label{prioritization-of-moral-character}}
+\paragraph{Prioritization of moral character}\label{prioritization-of-moral-character}}
 
 We tested whether moral characters are prioritized by examining the population-level effects from the three-level Bayesian hierarchical model of \(d'\) and reaction times from experiments 1a, 1b, 1c, 2, 5, and 6a. More specifically, we calculated the difference between the posterior distribution of the good/bad character and the neutral character and tested whether the 95\% highest density intervals (HDIs) of the difference include zero. If the 95\% highest density intervals do not include zero, we infer that there is a population-level difference between the conditions in the test, otherwise, we will infer that there is no evidence for such a difference. Note that for reaction times, we focused on the matched trials as in previous studies.
 
-\hypertarget{interaction-between-valence-and-self-referential-processing}{%
-\subsubsection{Interaction between valence and self-referential processing}\label{interaction-between-valence-and-self-referential-processing}}
+\hypertarget{modulation-of-self-referential-processing}{%
+\paragraph{Modulation of self-referential processing}\label{modulation-of-self-referential-processing}}
 
 We tested the interaction between valence and self-referential processing by examining the interaction between moral character and self-referential process, which included results from experiments 3a, 3b, and 6b. Using three-level models, we tested two possible explanations for the prioritization of good character: the valence effect or the interaction between self-referential processing and valence. If the valence effect model is correct, then there will be no interaction between moral character and self-referential processing, i.e., the prioritization effect exhibit a similar pattern for both self- and other-referential conditions. On the other hand, if the interaction model is true, then there will be an interaction between the two factors, i.e., the prioritization effect exhibit different patterns for self- and other-referential conditions.
 
-\hypertarget{spontaneous-interaction-between-the-self-and-good-character}{%
-\subsubsection{Spontaneous interaction between the self and good character}\label{spontaneous-interaction-between-the-self-and-good-character}}
+\hypertarget{spontaneous-binding-between-the-self-and-good-character}{%
+\paragraph{Spontaneous binding between the self and good character}\label{spontaneous-binding-between-the-self-and-good-character}}
 
 Based on data from experiments 4a and 4b, we further examined whether the self-referential processing for moral characters is spontaneous. The design of experiments 4a and 4b are complementary. For experiment 4a, if there exists a spontaneous binding between self and good character, there should be an interaction between moral character and self-referential processing, e.g., the task-irrelevant moral words facilitate or slows down the response to self- or other-referential conditions. For experiment 4b, if there exists a spontaneous binding between self and good character, then, there should also be an interaction between the two, e.g., there will be a self-other difference for some moral character conditions but not for other moral character conditions.
 
@@ -429,6 +471,10 @@ Previous moral perception studies usually reported a negativity effect, i.e., in
 \begin{CSLReferences}{1}{0}
 \leavevmode\vadjust pre{\hypertarget{ref-anderson_visual_2011}{}}%
 Anderson, E., Siegel, E. H., Bliss-Moreau, E., \& Barrett, L. F. (2011). The visual impact of gossip. \emph{Science}, \emph{332}(6036), 1446--1448. \url{https://doi.org/10.1126/science.1201574}
+
+\leavevmode\vadjust pre{\hypertarget{ref-Buxfcrkner_2017}{}}%
+Bürkner, P.-C. (2017). Brms: An r package for bayesian multilevel models using stan {[}Journal Article{]}. \emph{Journal of Statistical Software; Vol 1, Issue 1 (2017)}. Retrieved from \href{https://www.jstatsoft.org/v080/i01\%0Ahttp://dx.doi.org/10.18637/jss.v080.i01}{https://www.jstatsoft.org/v080/i01
+http://dx.doi.org/10.18637/jss.v080.i01}
 
 \leavevmode\vadjust pre{\hypertarget{ref-Carpenter_2017_stan}{}}%
 Carpenter, B., Gelman, A., Hoffman, M. D., Lee, D., Goodrich, B., Betancourt, M., \ldots{} Riddell, A. (2017). Stan: A probabilistic programming language {[}Journal Article{]}. \emph{Journal of Statistical Software}, \emph{76}(1). \url{https://doi.org/10.18637/jss.v076.i01}
@@ -525,6 +571,9 @@ Strohminger, N., Knobe, J., \& Newman, G. (2017). The true self: A psychological
 
 \leavevmode\vadjust pre{\hypertarget{ref-Sui_2012_JEPHPP}{}}%
 Sui, J., He, X., \& Humphreys, G. W. (2012). Perceptual effects of social salience: Evidence from self-prioritization effects on perceptual matching {[}Journal Article{]}. \emph{Journal of Experimental Psychology: Human Perception and Performance}, \emph{38}(5), 1105--1117. \url{https://doi.org/10.1037/a0029792}
+
+\leavevmode\vadjust pre{\hypertarget{ref-sui_tics_2015}{}}%
+Sui, J., \& Humphreys, G. W. (2015). The {Integrative} {Self}: {How} {Self}-{Reference} {Integrates} {Perception} and {Memory}. \emph{Trends in Cognitive Sciences}, \emph{19}(12), 719--728. \url{https://doi.org/10.1016/j.tics.2015.08.015}
 
 \leavevmode\vadjust pre{\hypertarget{ref-sui_self_attention_2019}{}}%
 Sui, J., \& Rotshtein, P. (2019). Self-prioritization and the attentional systems. \emph{Current Opinion in Psychology}, \emph{29}, 148--152. \url{https://doi.org/10.1016/j.copsyc.2019.02.010}
