--- a/endnote.bib
+++ b/endnote.bib
@@ -36,6 +36,25 @@
 }
 
 
+@article{sui_tics_2015,
+	title = {The {Integrative} {Self}: {How} {Self}-{Reference} {Integrates} {Perception} and {Memory}},
+	volume = {19},
+	issn = {1364-6613},
+	shorttitle = {The {Integrative} {Self}},
+	url = {https://www.sciencedirect.com/science/article/pii/S1364661315002065},
+	doi = {10.1016/j.tics.2015.08.015},
+	abstract = {We propose a new account of how self-reference affects information processing. We report evidence that self-reference affects the binding of memory to source, the integration of parts into perceptual wholes, and the ability to switch from a prior association to new associations. Self-reference also influences the integration of different stages of processing, linking attention to decision making, and affects the coupling between brain regions mediating self-representation and attention to the environment. Taken together, the data suggest that self-reference acts as a form of ‘integrative glue’ which can either enhance or disrupt performance, depending on the task context. We discuss the implications for understanding the self, and future directions for research.},
+	language = {en},
+	number = {12},
+	urldate = {2021-12-06},
+	journal = {Trends in Cognitive Sciences},
+	author = {Sui, Jie and Humphreys, Glyn W.},
+	month = dec,
+	year = {2015},
+	keywords = {decision-making, memory, perception, self-reference},
+	pages = {719--728},
+}
+
 @article{sui_self_attention_2019,
 	series = {Attention \& {Perception}},
 	title = {Self-prioritization and the attentional systems},
@@ -54,7 +73,7 @@
 }
 
 @article{Love_etal_2019_JASP,
-   author = {Love, Jonathon and Selker, Ravi and Marsman, Maarten and Jamil, Tahira and Dropmann, Damian and Verhagen, Josine and Ly, Alexander and Gronau, Quentin F. and Å mÃ­ra, Martin and Epskamp, Sacha and Matzke, Dora and Wild, Anneliese and Knight, Patrick and Rouder, Jeffrey N. and Morey, Richard D. and Wagenmakers, Eric-Jan},
+   author = {Love, Jonathon and Selker, Ravi and Marsman, Maarten and Jamil, Tahira and Dropmann, Damian and Verhagen, Josine and Ly, Alexander and Gronau, Quentin F. and Šmíra, Martin and Epskamp, Sacha and Matzke, Dora and Wild, Anneliese and Knight, Patrick and Rouder, Jeffrey N. and Morey, Richard D. and Wagenmakers, Eric-Jan},
    title = {JASP: Graphical Statistical Software for Common Statistical Designs},
    journal = {Journal of Statistical Software},
    volume = {1},
@@ -255,8 +274,8 @@ https://link.springer.com/content/pdf/10.3758%2FBF03196750.pdf},
    type = {Journal Article}
 }
 
-@article{BÃŒrkner_2017,
-   author = {BÃŒrkner, Paul-Christian},
+@article{Bürkner_2017,
+   author = {Bürkner, Paul-Christian},
    title = {brms: An R Package for Bayesian Multilevel Models Using Stan},
    journal = {Journal of Statistical Software; Vol 1, Issue 1 (2017)},
    url = {https://www.jstatsoft.org/v080/i01
@@ -345,7 +364,6 @@ http://dx.doi.org/10.18637/jss.v080.i01},
 	url = {https://www.readcube.com/articles/10.3389%2Ffninf.2013.00014},
 	doi = {10.3389/fninf.2013.00014},
 	shorttitle = {{HDDM}},
-	abstract = {The diffusion model is a commonly used tool to infer latent psychological processes underlying decision-making, and to link them to neural mechanisms based on response times. Although efficient open source software has been made available to quantitatively fit the model to data, current estimation methods require an abundance of response time measurements to recover meaningful parameters, and only provide point estimates of each parameter. In contrast, hierarchical Bayesian parameter estimation methods are useful for enhancing statistical power, allowing for simultaneous estimation of individual subject parameters and the group distribution that they are drawn from, while also providing measures of uncertainty in these parameters in the posterior distribution. Here, we present a novel Python-based toolbox called {HDDM} (hierarchical drift diffusion model), which allows fast and flexible estimation of the the drift-diffusion model and the related linear ballistic accumulator model. {HDDM} requires fewer data per subject/condition than non-hierarchical methods, allows for full Bayesian data analysis, and can handle outliers in the data. Finally, {HDDM} supports the estimation of how trial-by-trial measurements (e.g., {fMRI}) influence decision-making parameters. This paper will first describe the theoretical background of the drift diffusion model and Bayesian inference. We then illustrate usage of the toolbox on a real-world data set from our lab. Finally, parameter recovery studies show that {HDDM} beats alternative fitting methods like the Ï2-quantile method as well as maximum likelihood estimation. The software and documentation can be downloaded at: http://ski.clps.brown.edu/hddm\_docs/},
 	journaltitle = {Frontiers in Neuroinformatics},
 	author = {Wiecki, Thomas V. and Sofer, Imri and Frank, Michael J.},
 	urldate = {2020-06-11},
@@ -360,7 +378,6 @@ http://dx.doi.org/10.18637/jss.v080.i01},
 	url = {https://doi.org/10.3758/PBR.16.5.798},
 	doi = {10.3758/PBR.16.5.798},
 	shorttitle = {Psychological interpretation of the ex-Gaussian and shifted Wald parameters},
-	abstract = {A growing number of researchers use descriptive distributions such as the ex-Gaussian and the shifted Wald to summarize response time data for speeded two-choice tasks. Some of these researchers also assume that the parameters of these distributions uniquely correspond to specific cognitive processes. We studied the validity of this cognitive interpretation by relating the parameters of the ex-Gaussian and shifted Wald distributions to those of the Ratcliff diffusion model, a successful model whose parameters have well-established cognitive interpretations. In a simulation study, we fitted the ex-Gaussian and shifted Wald distributions to data generated from the diffusion model by systematically varying its parameters across a wide range of plausible values. In an empirical study, the two descriptive distributions were fitted to published data that featured manipulations of task difficulty, response caution, and a priori bias. The results clearly demonstrate that the ex-Gaussian and shifted Wald parameters do not correspond uniquely to parameters of the diffusion model. We conclude that researchers should resist the temptation to interpret changes in the ex-Gaussian and shifted Wald parameters in terms of cognitive processes. Supporting materials may be downloaded from http://pbr.psychonomic-journals .org/content/supplemental.},
 	pages = {798--817},
 	number = {5},
 	journaltitle = {Psychonomic Bulletin \& Review},
@@ -378,7 +395,6 @@ http://dx.doi.org/10.18637/jss.v080.i01},
 	url = {https://doi.org/10.3758/s13421-017-0722-3},
 	doi = {10.3758/s13421-017-0722-3},
 	shorttitle = {Self-prioritization and perceptual matching},
-	abstract = {Recent research has revealed that self-referential processing enhances perceptual judgments, the so-called self-prioritization effect. The extent and origin of this effect remains unknown, however. Noting the multifaceted nature of the self, here we hypothesized that temporal influences on self-construal (i.e., past/future-self continuity) may serve as an important determinant of stimulus prioritization. Specifically, as representations of the self increase in abstraction as a function of temporal distance (i.e., distance from now), self-prioritization may only emerge when stimuli are associated with the current self. The results of three experiments supported this prediction. Self-relevance only enhanced performance in a standard perceptual-matching task when stimuli (i.e., geometric shapes) were connected with the current self; representations of the self in the future (Expts. 1 \& 2) and past (Expt. 3) failed to facilitate decision making. To identify the processes underlying task performance, data were interrogated using a hierarchical drift diffusion model ({HDDM}) approach. Results of these analyses revealed that self-prioritization was underpinned by a stimulus bias (i.e., rate of information uptake). Collectively, these findings elucidate when and how self-relevance influences decisional processing.},
 	pages = {1223--1239},
 	number = {7},
 	journaltitle = {Memory \& Cognition},
@@ -397,7 +413,6 @@ http://dx.doi.org/10.18637/jss.v080.i01},
 	url = {https://link.springer.com/article/10.1007/s00426-019-01235-w},
 	doi = {10.1007/s00426-019-01235-w},
 	shorttitle = {Valence and ownership},
-	abstract = {Research has demonstrated that possession exerts a potent influence on stimulus processing, such that objects are categorized more rapidly when owned-by-self than when they belong to other people. Outstanding theoretical questions remain, however, regarding the extent of this self-prioritization effect. In particular, does ownership enhance the processing of objects regardless of their valence or is self-prioritization restricted to only desirable items? To address this issue, here we explored the speed with which participants categorized objects (i.e., desirable and undesirable posters) that ostensibly belonged to the self and a best friend. In addition, to identify the cognitive processes supporting task performance, data were submitted to a hierarchical drift-diffusion model ({HDDM}) analysis. The results revealed a self-prioritization effect (i.e., {RTself} < {RTfriend}) for desirable posters that was underpinned by differences in the efficiency of stimulus processing. Specifically, decisional evidence was extracted more rapidly from self-owned posters when they were desirable than undesirable, an effect that was reversed for friend-owned posters. These findings advance understanding of when and how valence influences self-prioritization during decisional processing.},
 	pages = {1--10},
 	journaltitle = {Psychological Research},
 	shortjournal = {Psychological Research},
@@ -413,7 +428,6 @@ http://dx.doi.org/10.18637/jss.v080.i01},
 	issn = {1350-6285},
 	url = {https://doi.org/10.1080/13506285.2017.1323813},
 	doi = {10.1080/13506285.2017.1323813},
-	abstract = {The tendency to prioritize information related to the self (or socially salient information) has been established for several cognitive tasks. However, earlier studies on this question suffered from confounds such as familiarity and intimacy. Recently, a series of studies overcame this limitation using newly learnt associations between geometric shapes and identities. Results from these studies have been argued to show that self-prioritization affects perceptual processing. In two studies, we replicated and extended the original shape-identity association paradigm to test an alternative hypothesis that self-prioritization does not affect perceptual processes but arises from potential memory differences introduced during the formation of associations. We found that induced memory differences lead to response patterns similar to those that have been attributed to changes in the perceptual domain. However, even extended learning undertaken to equate memory for various identity-based associations did not eliminate the effects of self-prioritization, leaving the question open if the differences are cognitive or perceptual in nature. The current evidence can be explained both in terms of memory differences and perceptual effects. Hence, we strongly recommend that the existence of perceptual effects of self-prioritization should be investigated directly rather than through changes in reaction times in match-non-match tasks.},
 	pages = {381--398},
 	number = {1},
 	journaltitle = {Visual Cognition},
@@ -430,7 +444,6 @@ http://dx.doi.org/10.18637/jss.v080.i01},
 	issn = {1531-5320},
 	url = {https://doi.org/10.3758/BF03212980},
 	doi = {10.3758/BF03212980},
-	abstract = {Two models, a Poisson race model and a diffusion model, are fit to data from a perceptual matching task. In each model, information about the similarity or the difference between two stimuli accumulates toward thresholds for either response. Stimulus variables are assumed to influence the rate at which information accumulates, and response variables are assumed to influence the level of the response thresholds. Three experiments were conducted to assess the performance of each model. In Experiment 1, observers performed under different response deadlines; in Experiment 2, response bias was manipulated by changing the relative frequency ofsame anddifferent stimuli. In Experiment 3, stimulus pairs were presented at three eccentricities: foveal, parafoveal, and peripheral. We examined whether the race and diffusion models could fit the response time and accuracy data through changes only in response parameters (for Experiments 1 and 2) or stimulus parameters (for Experiment 3). Comparisons between the two models suggest that the race model, which has not been studied extensively, can account for perceptual matching data at least as well as the diffusion model. Furthermore, without the constraints on the parameters provided by the experimental conditions, the diffusion and the race models are indistinguishable. This finding emphasizes the importance of fitting models across several conditions and imposing logical psychological constraints on the parameters of models.},
 	pages = {208--256},
 	number = {2},
 	journaltitle = {Psychonomic Bulletin \& Review},
@@ -449,7 +462,6 @@ http://dx.doi.org/10.18637/jss.v080.i01},
 	url = {https://doi.org/10.3758/s13428-013-0330-5},
 	doi = {10.3758/s13428-013-0330-5},
 	shorttitle = {{BootES}},
-	abstract = {Bootstrap Effect Sizes ({bootES}; Gerlanc \& Kirby, 2012) is a free, open-source software package for R (R Development Core Team, 2012), which is a language and environment for statistical computing. {BootES} computes both unstandardized and standardized effect sizes (such as Cohenâs d, Hedgesâs g, and Pearsonâs r) and makes easily available for the first time the computation of their bootstrap confidence intervals ({CIs}). In this article, we illustrate how to use {bootES} to find effect sizes for contrasts in between-subjects, within-subjects, and mixed factorial designs and to find bootstrap {CIs} for correlations and differences between correlations. An appendix gives a brief introduction to R that will allow readers to use {bootES} without having prior knowledge of R.},
 	pages = {905--927},
 	number = {4},
 	journaltitle = {Behavior Research Methods},
@@ -460,7 +472,6 @@ http://dx.doi.org/10.18637/jss.v080.i01},
 	langid = {english}
 }
 
-
 @article{anderson_visual_2011,
 	title = {The Visual Impact of Gossip},
 	volume = {332},
@@ -468,9 +479,6 @@ http://dx.doi.org/10.18637/jss.v080.i01},
 	issn = {0036-8075, 1095-9203},
 	url = {https://science.sciencemag.org/content/332/6036/1446},
 	doi = {10.1126/science.1201574},
-	abstract = {Gossip is a form of affective information about who is friend and who is foe. We show that gossip does not influence only how a face is evaluated it affects whether a face is seen in the first place. In two experiments, neutral faces were paired with negative, positive, or neutral gossip and were then presented alone in a binocular rivalry paradigm (faces were presented to one eye, houses to the other). In both studies, faces previously paired with negative (but not positive or neutral) gossip dominated longer in visual consciousness. These findings demonstrate that gossip, as a potent form of social affective learning, can influence vision in a completely top-down manner, independent of the basic structural features of a face.
-Negative gossip about a person renders that person's face more visible to the onlooker.
-Negative gossip about a person renders that person's face more visible to the onlooker.},
 	pages = {1446--1448},
 	number = {6036},
 	journaltitle = {Science},
@@ -488,7 +496,6 @@ Negative gossip about a person renders that person's face more visible to the on
 	issn = {1931-1516(Electronic),1528-3542(Print)},
 	doi = {10.1037/emo0000305},
 	shorttitle = {No impact of affective person knowledge on visual awareness},
-	abstract = {Stimuli with intrinsic emotional value, like emotional faces, and stimuli associated with reward and punishment are often prioritized in visual awareness relative to neutral stimuli. Recently, Anderson, Siegel, Bliss-Moreau, and Barrett (2011) demonstrated that simply associating a face with affective knowledge can also influence visual awareness. Using a binocular rivalry task ({BR}), where a face was shown to one eye and a house to the other, they found that faces paired with negative versus neutral and positive behaviors dominated visual awareness. We were interested in whether faces associated with negative information would also be capable of reaching awareness more quickly in the first place. To test this, we set out to replicate Anderson and colleagues finding and to examine whether it would extend to breaking continuous flash suppression (b-{CFS}), a technique where a dynamic mask shown to one eye initially suppresses the stimulus shown to the other eye. Participants completed a learning task followed by {BR} and b-{CFS} tasks, in counterbalanced order. Across both tasks, faces associated with negative behaviors were treated no differently from faces associated with neutral or positive behaviors. However, faces associated with any type of behavior were prioritized in awareness over novel faces. These findings indicate that while familiarity influences conscious perception, the influence of affective person knowledge on visual awareness is more circumscribed than previously thought. ({PsycInfo} Database Record (c) 2020 {APA}, all rights reserved)},
 	pages = {1199--1207},
 	number = {8},
 	journaltitle = {Emotion},
@@ -1282,7 +1289,6 @@ Publisher: American Psychological Association},
 	url = {https://doi.org/10.1177/0956797620909742},
 	doi = {10.1177/0956797620909742},
 	shorttitle = {Can Bad Be Good?},
-	abstract = {To avoid threats to the self, people shun comparisons with similarâyet immoral, mentally unstable, or otherwise negatively viewedâothers. Despite this prevalent perspective, we consider a contrarian question: Can people be attracted to darker versions of themselves? We propose that with self-threat assuaged, similarity signals self-relevance, which draws people toward those who are similar to them despite negative characteristics. To test this general idea, we explored a prevalent context that may offer a safe haven from self-threat: stories. Using a large-scale proprietary data set from a company with over 232,000 registered users, we demonstrated that people have a preference for villainsâunambiguously negative individualsâwho are similar to themselves, which suggests that people are attracted to such comparisons in everyday life. Five subsequent lab experiments (N = 1,685) demonstrated when and why similarity results in attraction towardârather than repulsion fromânegative others.},
 	pages = {518--530},
 	number = {5},
 	journaltitle = {Psychological Science},
