--- a/general_method.rmd
+++ b/general_method.rmd
@@ -2,17 +2,29 @@
 ## Design and Procedure
 This series of experiments used the social associative learning paradigm (or self-tagging paradigm, see @Sui_2012_JEPHPP), in which participants first learned the associations between geometric shapes and labels of different moral characters (e.g., in the first three studies, the triangle, square, and circle and Chinese words for “good person”, “neutral person”, and “bad person”, respectively). The associations of shapes and labels were counterbalanced across participants. The paradigm consists of a brief learning stage and a test stage. During the learning stage, participants were instructed about the association between shapes and labels. Participants started the test stage with a practice phase to familiarize themselves with the task, in which they viewed one of the shapes above the fixation while one of the labels below the fixation and judged whether the shape and the label matched the association they learned. If the overall accuracy reached 60% or higher at the end of the practicing session, participants proceeded to the experimental task of the test stage. Otherwise, they finished another practices sessions until the overall accuracy was equal to or greater than 60%.  The experimental task shared the same trial structure as in the practice. 
 
-Experiments 1a, 1b, 1c, 2, 5, and 6a were designed to explore and validate the effect of moral character on perceptual matching. All these experiments shared a 2 (matching: match vs. nonmatch) by 3 (moral character: good vs. neutral vs. bad person) within-subject design. Experiment 1a was the first one of the whole series of studies, which revealed a prioritization of good character. Experiments 1b, 1c, and 2 were then designed to confirm that it is moral character that caused the effect. More specifically, experiment 1b used different Chinese words as labels to test whether the effect only occurred with specific words. Experiment 1c manipulated the moral character indirectly: participants first learned to associate different moral behaviors with different Chinese names, after remembering the association, they then associate the names with different shapes and finished the perceptual matching task. Experiment 2 further tested whether the way we presented the stimuli influence the prioritization of moral character, by sequentially presenting labels and shapes instead of simultaneous presentation. Note that a few participants in experiment 2 also participated in experiment 1a because we originally planned a cross-task comparison. Experiment 5 was designed to compare the effect size of moral character and other important social evaluative dimensions (aesthetics and emotion). Different social evaluative dimensions were implemented in different blocks, only the data from moral character blocks, which shared the design of experiment 1a, were included in the three-level models. Experiment 6a, which shared the same design as experiment 2, was an EEG experiment aimed at exploring the neural correlates of the effect. Only the behavioral results of experiment 6a were included in the analysis reported here.
+Experiments 1a, 1b, 1c, 2, 5, and 6a were designed to explore and confirm the effect of moral character on perceptual matching. All these experiments shared a 2 (matching: match vs. nonmatch) by 3 (moral character: good vs. neutral vs. bad person) within-subject design. Experiment 1a was the first one of the whole series of studies, which aimed to examine the prioritization of moral character and found that shapes associated with good character were prioritized. Experiments 1b, 1c, and 2 were to confirm that it is the moral character that caused the effect. More specifically, experiment 1b used different Chinese words as labels to test whether the effect was contaminated by familiarity. Experiment 1c manipulated the moral character indirectly: participants first learned to associate different moral behaviors with different Chinese names, after remembering the association, they then associate the names with different shapes and finished the perceptual matching task. Experiment 2 further tested whether the way we presented the stimuli influence the prioritization of moral character, by sequentially presenting labels and shapes instead of simultaneous presentation. Note that a few participants in experiment 2 also participated in experiment 1a because we originally planned a cross-task comparison. Experiment 5 was designed to compare the prioritization of good character with other important social values (aesthetics and emotion). All social values had three levels, positive, neutral, and negative, and were associated with different shapes. Participants finished the associative learning task for different social values in different blocks, and the order of the social values was counterbalanced. Only the data from moral character blocks, which shared the design of experiment 1a, were reported here. Experiment 6a, which shared the same design as experiment 2, was an EEG experiment aimed at exploring the neural mechanism of the prioritization of good character. Only behavioral results of experiment 6a were reported here.
 
-Experiments 3a, 3b, and 6b were designed to test whether the prioritization of good character can be explained by the valence effect alone or by an interaction between the valence effect and self-referential processing. To do so, we included self-reference as another within-subject variable. For example, experiment 3a directly extended experiment 1a into a 2 (matching: match vs. nonmatch) by 2 (reference: self vs. other) by 3 (moral character: good vs. neutral vs. bad) within-subject design. Thus, in experiment 3a, there were six conditions (good-self, neutral-self, bad-self, good-other, neutral-other, and bad-other) and six shapes (triangle, square, circle, diamond, pentagon, and trapezoids). Experiment 6b was an EEG experiment based on experiment 3a but presented the label and shape sequentially. Because of the relatively high working memory load (six label-shape pairs), experiment 6b was conducted in two days: on the first day participants finished the perceptual matching task as a practice, and on the second day, they finished the task again while the EEG signals were recorded. We only focus on the first day's data here. Experiment 3b was designed to separate the self-referential trials and other-referential trials. That is, participants finished two different types of blocks: in the self-referential blocks, they only made matching judgments to shape-label pairs that related to the self (i.e., shapes and labels of good-self, neutral-self, and bad-self), in the other-referential blocks, they only responded to shape-label pairs that related to the other (i.e., shapes and labels of good-other, neutral-other, and bad-other).
+Experiments 3a, 3b, and 6b were designed to test whether the prioritization of good character can be explained by the valence effect alone or by an interaction between the valence effect and self-referential processing. To do so, we included self-reference as another within-subject variable. For example, experiment 3a extended experiment 1a into a 2 (matching: match vs. nonmatch) by 2 (reference: self vs. other) by 3 (moral character: good vs. neutral vs. bad) within-subject design. Thus, in experiment 3a, there were six conditions (good-self, neutral-self, bad-self, good-other, neutral-other, and bad-other) and six shapes (triangle, square, circle, diamond, pentagon, and trapezoids). Experiment 6b was an EEG experiment based on experiment 3a but presented the label and shape sequentially. Because of the relatively high working memory load (six label-shape pairs), participants finished experiment 6b in two days. On the first day, participants completed the perceptual matching task as a practice, and on the second day, they finished the task again while the EEG signals were recorded. We only focus on the first day's data here. Experiment 3b was designed to test whether the effect found in experiments 3a and 6b is robust if we separately present the self-referential trials and other-referential trials. That is, participants finished two different types of blocks: in the self-referential blocks, they only made matching judgments to shape-label pairs that related to the self (i.e., shapes and labels of good-self, neutral-self, and bad-self), in the other-referential blocks, they only responded to shape-label pairs that related to the other (i.e., shapes and labels of good-other, neutral-other, and bad-other).
 
-Experiments 4a and 4b were designed to further test the mechanism of the self-referential process in the prioritization of good character. In experiment 4a, participants were instructed to learn the association between two shapes (circle and square) with two labels (self vs. other) in the learning stage. In the test stage, they were instructed only respond to the shape and label during the test stage. To test the effect of moral character, we presented the labels of moral character in shapes and instructed participants to ignore the words in shapes when making matching judgments. In the experiment 4b, we reversed the role of self and moral character in the task: Participants learned associations between three labels (good-person, neutral-person, and bad-person) and three shapes (circle, square, and triangle) and made matching judgments about the shape and label of moral character, while words related to identity, "self" or "other", were presented within the shapes. As in 4a, participants were told to ignore the words inside the shape during the perceptual matching task. 
+Experiments 4a and 4b were designed to further test the interaction between valence and self-referential process in prioritization of good character. In experiment 4a, participants were instructed to learn the association between two shapes (circle and square) with two labels (self vs. other) in the learning stage. In the test stage, they were instructed only respond to the shape and label during the test stage. To test the effect of moral character, we presented the labels of moral character in the shapes and instructed participants to ignore the words in shapes when making matching judgments. In the experiment 4b, we reversed the role of self and moral character in the task: Participants learned associations between three labels (good-person, neutral-person, and bad-person) and three shapes (circle, square, and triangle) and made matching judgments about the shape and label of moral character, while words related to identity, "self" or "other", were presented within the shapes. As in 4a, participants were told to ignore the words inside the shape during the perceptual matching task. 
 
 ## Stimuli and Materials
 
-E-prime 2.0 was used for presenting stimuli and collecting behavioral responses. The experiments were conducted in two universities located in two different cities in China. Participants recruited from Tsinghua University, Beijing, finished the experiment individually in a dim-lighted chamber. Stimuli were presented on 22-inch CRT monitors and participants rest their chins on a brace to fix the distance between their eyes and the screen around 60 cm. The visual angle of geometric shapes was about $3.7^\circ × 3.7^\circ$, the fixation cross is of $0.8^\circ × 0.8^\circ$ visual angle at the center of the screen. The words were of $3.6^\circ$ × $1.6^\circ$ visual angle. The distance between the center of shapes or images of labels and the fixation cross was of $3.5^\circ$ visual angle. Participants recruited from Wenzhou University, Wenzhou, finished the experiment in a group consisting of 3 ~ 12 participants in a dim-lighted testing room. They were required to finish the whole experiment independently. Also, they were instructed to start the experiment simultaneously, so that the distraction between participants was minimized. The stimuli were presented on 19-inch CRT monitors with the same set of parameters in E-prime 2.0 as in Tsinghua University, however, the visual angles could not be controlled because participants’ chins were not fixed.
+We used E-prime 2.0 for presenting stimuli and collecting behavioral responses. Data were collected from two universities located in two different cities in China. Participants recruited from Tsinghua University, Beijing, finished the experiment individually in a dim-lighted chamber. Stimuli were presented on 22-inch CRT monitors and participants rested their chins on a brace to fix the distance between their eyes and the screen around 60 cm. The visual angle of geometric shapes was about $3.7^\circ × 3.7^\circ$, the fixation cross is of $0.8^\circ × 0.8^\circ$ visual angle at the center of the screen. The words were of $3.6^\circ$ × $1.6^\circ$ visual angle. The distance between the center of shapes or images of labels and the fixation cross was of $3.5^\circ$ visual angle. Participants from Wenzhou University, Wenzhou, finished the experiment in a group consisting of 3 ~ 12 participants in a dim-lighted testing room. They were instructed to finish the whole experiment independently. Also, they were told to start the experiment at the same time so that the distraction between participants was minimized. The stimuli were presented on 19-inch CRT monitors with the same set of parameters in E-prime 2.0 as in Tsinghua University, however, the visual angles could not be controlled because participants’ chins were not fixed.
 
-In most of these experiments, participants were also asked to fill out questionnaires after finishing the behavioral tasks. All the questionnaire data were open [see, dataset 4 in @Liu_2020_JOPD]. See Table S1 for a summary of information about all the experiments.
+In most of these experiments, participants were also asked to fill out questionnaires after finishing the behavioral tasks. All the questionnaire data were open [see, dataset 4 in @Liu_2020_JOPD]. See Table 1 for a summary of information about all the experiments. 
+
+```{r 'Table_1_exp_info', ehco = FALSE, results = 'asis'}
+exp_table <- read.csv('Exp_info_all.csv') %>%
+  dplyr::rename(ExpID = 1)
+# knitr::kable(exp_table, caption = "Information about all experiments")
+apa_table(
+  exp_table
+  , caption = "Information about all experiments."
+  , note = "DV = dependent variables; Valence = how valence was manipulated; Shape & Label = how shapes & labels were presented."
+  , escape = TRUE
+)
+```
 
 ## Data analysis
 
@@ -20,7 +32,7 @@ We used the `tidyverse` of r (see script `Load_save_data.r`) to preprocess the d
 
 We used the Bayesian hierarchical model (BHM, or Bayesian generalized linear mixed models, Bayesian multilevel models) to model the reaction time and accuracy data because BHM provided three advantages over the classic NHST approach (repeated measure ANOVA or *t*-tests). First, BHM estimates the posterior distributions of parameters for statistical inference, therefore providing uncertainty in estimation [@Rouder_2005_BHM_SDT]. Second, BHM, where generalized linear mixed models could be easily implemented, can use distributions that fit the distribution of real data instead of using the normal distribution for all data. Using appropriate distributions for the data will avoid misleading results and provide a better fitting of the data. For example, Reaction times are not normally distributed but are right skewed, and the linear assumption in ANOVAs is not satisfied [@Rousselet_2019]. Third, BHM provides a unified framework to analyze data from different levels and different sources, avoiding information loss when we need to combine data from different experiments. 
 
-We used the `r` package `BRMs` [@Bürkner_2017], which used Stan [@Carpenter_2017_stan] as the backend, for the BHM analyses. We estimated the overall effect across experiments that shared the same experimental design using one model, instead of a two-step approach that was adopted in mini-meta-analysis [e.g., @Goh_2016_mini]. More specifically, a three-level model was used to estimate the overall effect of good-person on perceptual matching, which include data from five experiments: 1a, 1b, 1c, 2, 5, and 6a. Similarly, a three-level HBM model is used for all experiments that tested the modulation effect of self-referential processing on the prioritization of good character, including experiments 3a, 3b, and 6b. Results of the individual experiment can be found in the supplementary results. For experiments 4a and 4b, which tested the implicit interaction between the self and good character, we used HBM for each experiment separately. 
+We used the `r` package `BRMs` [@Bürkner_2017], which used Stan [@Carpenter_2017_stan] as the backend, for the BHM analyses. We estimated the overall effect across experiments that shared the same experimental design using one model, instead of a two-step approach that was adopted in mini-meta-analysis [e.g., @Goh_2016_mini]. More specifically, a three-level model was used to estimate the overall effect of prioritization of good character, which included data from five experiments: 1a, 1b, 1c, 2, 5, and 6a. Similarly, a three-level HBM model is used for experiments 3a, 3b, and 6b. Results of individual experiments can be found in the supplementary results. For experiments 4a and 4b, which tested the implicit interaction between the self and good character, we used HBM for each experiment separately. 
 
 ### Response data
 We followed previous studies [@Hu_2020_GoodSelf; @Sui_2012_JEPHPP] and used the signal detection theory approach to analyze the response data. More specifically, the match trials are treated as signals and non-match trials are noise. The sensitivity and criterion of signal detection theory are modeled through BHM [@Rouder_2005_BHM_SDT]. 
@@ -39,56 +51,54 @@ $$ \begin{bmatrix}\beta_{0j}\\
 \theta_{1}\\
 \end{bmatrix}, \sum) $$
 
-In `BRMs`, we used the following formula for the first set of experiments, which have a 2 (matching: match vs. non-match) by 3 (moral character: good vs. neutral vs. bad) within-subject design, i.e., experiment 1a, 1b, 1c, 2, 5, and 6a:
+We used the following formula for experiments 1a, 1b, 1c, 2, 5, and 6a, which have a 2 (matching: match vs. non-match) by 3 (moral character: good vs. neutral vs. bad) within-subject design:
 
 `saymatch ~ 0 + Valence + Valence:ismatch + (0 + Valence + Valence:ismatch | Subject) + (0 + Valence + Valence:ismatch | ExpID_new:Subject) , family = bernoulli(link="probit")`
 
-For experiments 3a, 3b, and 6b, an additional variable is included in the formula:
+in which the `saymatch` is the response data whether participants pressed the key corresponding to “match”, `ismatch` is the independent variable of matching, `Valence` is the independent variable of moral character, `Subject` is the index of participants, and `Exp_ID_new` is the index of different experiments. Not that we distinguished data collected from two universities.
+
+For experiments 3a, 3b, and 6b, an additional variable, i.e., reference (self vs. other), was included in the formula:
 
 `saymatch ~ 0 + ID:Valence + ID:Valence:ismatch + (0 + ID:Valence + ID:Valence:ismatch | Subject) + (0 + ID:Valence + ID:Valence:ismatch | ExpID_new:Subject), family = bernoulli(link="probit")`
-
+in which the `ID` is the independent variable “reference”, which means whether the stimulus was self-referential or other-referential.
 
 ### Reaction times
 We used log-normal distribution (https://lindeloev.github.io/shiny-rt/#34_(shifted)_log-normal) to model the RT data. This means that we need to estimate the posterior of two parameters: $\mu$, and $\sigma$. $\mu$ is the mean of the `logNormal` distribution, and $\sigma$ is the disperse of the distribution. 
 
-The reaction time of the $j$th subject on $i$th trial is log-normal distributed:
+The reaction time  of the $j$th subject on $i$th trial, $y_{ij}$,  is log-normal distributed:
 $$ log(y_{ij}) \sim N(\mu_{j}, \sigma_{j})$$ 
-$y_{ij}$ is the RT of the $i$th trial of the $j$th participants.
 
+The parameter $\mu_{j}$ is a linear regression of the independent variables:
 $$\mu_{j} = \beta_{0j} + \beta_{1j}*IsMatch_{ij} * Valence_{ij}$$
+
+and the parameter $\sigma_{j}$ does not vary with independent variables:
+$$\sigma_{j} \sim HalfNormal()$$
+
+The subjective-specific intercepts ($\beta_{0j}$) and slopes ($\beta_{1j}$) are described by multivariate normal with means and a covariance matrix for the parameters.
 $$ \begin{bmatrix}\beta_{0j}\\
 \beta_{1j}\\
 \end{bmatrix} \sim N(\begin{bmatrix}\theta_{0}\\
 \theta_{1}\\
 \end{bmatrix}, \sum) $$
 
-$$\sigma_{j} \sim HalfNormal()$$
-
-The formula used for modeling the data from experiments with a 2 by 3 within-subject design is as follows:
-
-`RT_sec ~ 1 + Valence*ismatch + (Valence*ismatch | Subject), family = lognormal()`
-
-For experiments with a 2 by 2 by 3 within-subject design, the formula is as follows:
-
-`RT_sec ~ 1 + ID*Valence*ismatch + (ID*Valence*ismatch | Subject), family = lognormal()`
-
-As for the $d’$, we expanded the RT model to three-level models and the formulas used for three-level models are as follows:
+The formula used for experiments 1a, 1b, 1c, 2, 5, and 6a, which have a 2 (matching: match vs. non-match) by 3 (moral character: good vs. neutral vs. bad) within-subject design, is as follows:
 
 `RT_sec ~ 1 + Valence*ismatch + (Valence*ismatch | Subject) + (Valence*ismatch | ExpID_new:Subject), family = lognormal()`
+in which `RT_sec` is the reaction times data with the second as a unit. The other variables has the same meaning as the response data. 
 
-or 
-
+For experiments 3a, 3b, and 6b, which have a 2 by 2 by 3 within-subject design, the formula is as follows: 
 `RT_sec ~ 1 + ID*Valence + (ID*Valence | Subject) + (ID*Valence | ExpID_new:Subject), family = lognormal()` 
 
 Note that for experiments 3a, 3b, and 6b, the three-level model for reaction times only included the matched trials to avoid divergence when estimating the posterior of the parameters.
 
-### Prioritization of moral character
+### Testing hypotheses
+#### Prioritization of moral character
 We tested whether moral characters are prioritized by examining the population-level effects from the three-level Bayesian hierarchical model of $d'$ and reaction times from experiments 1a, 1b, 1c, 2, 5, and 6a. More specifically, we calculated the difference between the posterior distribution of the good/bad character and the neutral character and tested whether the 95% highest density intervals (HDIs) of the difference include zero. If the 95% highest density intervals do not include zero, we infer that there is a population-level difference between the conditions in the test, otherwise, we will infer that there is no evidence for such a difference. Note that for reaction times, we focused on the matched trials as in previous studies.
 
-### Interaction between valence and self-referential processing
+#### Modulation of self-referential processing
 We tested the interaction between valence and self-referential processing by examining the interaction between moral character and self-referential process, which included results from experiments 3a, 3b, and 6b. Using three-level models, we tested two possible explanations for the prioritization of good character: the valence effect or the interaction between self-referential processing and valence. If the valence effect model is correct, then there will be no interaction between moral character and self-referential processing, i.e., the prioritization effect exhibit a similar pattern for both self- and other-referential conditions. On the other hand, if the interaction model is true, then there will be an interaction between the two factors, i.e., the prioritization effect exhibit different patterns for self- and other-referential conditions.
 
-### Spontaneous interaction between the self and good character
+#### Spontaneous binding between the self and good character
 Based on data from experiments 4a and 4b, we further examined whether the self-referential processing for moral characters is spontaneous. The design of experiments 4a and 4b are complementary. For experiment 4a, if there exists a spontaneous binding between self and good character, there should be an interaction between moral character and self-referential processing, e.g., the task-irrelevant moral words facilitate or slows down the response to self- or other-referential conditions. For experiment 4b, if there exists a spontaneous binding between self and good character, then, there should also be an interaction between the two, e.g., there will be a self-other difference for some moral character conditions but not for other moral character conditions.
 
 We only reported the subjective distance between different persons in the supplementary results and did not analyze other questionnaire data described in [@Liu_2020_JOPD].
